--- a/res/layout/activity_start.xml
+++ b/res/layout/activity_start.xml
@@ -11,4 +11,14 @@
         android:layout_centerVertical="true"
         android:text="@string/hello_world" />
 
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:onClick="makePhotoClick"
+        android:text="@string/make_photo"
+        android:textColor="@android:color/black"
+        android:textSize="15dp"
+        android:textStyle="bold" >
+    </Button>
 </RelativeLayout>
