--- a/res/layout/activity_start.xml
+++ b/res/layout/activity_start.xml
@@ -5,6 +5,7 @@
     tools:context=".StartActivity" >
 
     <TextView
+        android:id="@+id/tvStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
