--- a/res/layout/activity_start.xml
+++ b/res/layout/activity_start.xml
@@ -44,7 +44,7 @@
         android:text="@string/hello_world" />
     
     <ListView
-		android:id="@+id/list"
+		android:id="@+id/productList"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent" 
 		android:layout_weight="1"/>
