--- a/res/layout/item.xml
+++ b/res/layout/item.xml
@@ -5,11 +5,28 @@
   android:layout_height="wrap_content">
   <ImageView
   	  android:id="@+id/image"
-	  android:layout_width="50dip"
-	  android:layout_height="50dip" android:src="@drawable/stub" android:scaleType="centerCrop"/>
+	  android:layout_width="80dip"
+	  android:layout_height="80dip" android:src="@drawable/stub" android:scaleType="centerCrop"/>
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical">    
   <TextView
-  	  android:id="@+id/text"
-  	  android:layout_width="fill_parent"
-	  android:layout_height="wrap_content"
-	  android:layout_weight="1" android:layout_gravity="left|center_vertical" android:textSize="20dip" android:layout_marginLeft="10dip"/>
+	  	  android:id="@+id/text"
+	  	  android:layout_width="fill_parent"
+		  android:layout_height="wrap_content"
+		  android:layout_weight="1" 
+		  android:layout_gravity="left|center_vertical" 
+		  android:textSize="20dip" 
+		  android:layout_marginLeft="10dip"/>
+	
+	  <TextView
+	  	  android:id="@+id/price"
+	  	  android:layout_width="fill_parent"
+		  android:layout_height="wrap_content"
+		  android:layout_weight="1"
+		  android:layout_gravity="left|center_vertical" 
+		  android:textSize="14dip" 
+		  android:layout_marginLeft="10dip"/>
+  </LinearLayout>
 </LinearLayout>
