--- a/res/layout/activity_start.xml
+++ b/res/layout/activity_start.xml
@@ -10,29 +10,52 @@
         android:layout_height="wrap_content" >
 
         <Button
+            android:id="@+id/checkout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_marginRight="39dp"
-            android:onClick="makePhotoClick"
-            android:text="@string/make_photo"
+            android:layout_centerHorizontal="true"
+            android:onClick="onCheckoutClicked"
+            android:text="Checkout"
             android:textColor="@android:color/black"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/checkout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="39dp"
-            android:onClick="onCheckoutClicked"
-            android:text="Checkout"
+            android:layout_marginLeft="30dp"
+            android:onClick="makePhotoClick"
+            android:text="@string/make_photo"
             android:textColor="@android:color/black"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="21dp"
+            android:layout_toRightOf="@+id/checkout"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/tvTotalTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Total:"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/tvTotalCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0.00"
+                android:textSize="25sp"/>
+
+        </LinearLayout>
 
     </RelativeLayout>
 
