--- a/res/layout/activity_start.xml
+++ b/res/layout/activity_start.xml
@@ -8,7 +8,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_marginTop="45dp" >
 
         <Button
             android:id="@+id/checkout"
