--- a/res/layout/activity_start.xml
+++ b/res/layout/activity_start.xml
@@ -12,18 +12,7 @@
         android:layout_marginTop="45dp" >
 
         <Button
-            android:id="@+id/checkout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:onClick="onCheckoutClicked"
-            android:text="Checkout"
-            android:textColor="@android:color/black"
-            android:textSize="15sp"
-            android:textStyle="bold" />
-
-        <Button
+            android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -54,11 +43,22 @@
                 android:id="@+id/tvTotalCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0.00"
-                android:textSize="25sp"/>
-
+                android:text="0.00 PLN"
+                android:textSize="20sp" />
         </LinearLayout>
 
+        <Button
+            android:id="@+id/checkout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="14dp"
+            android:layout_toRightOf="@+id/button1"
+            android:onClick="onCheckoutClicked"
+            android:text="Checkout"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"
+            android:textStyle="bold" />
     </RelativeLayout>
 
     <TextView
