--- a/res/layout/activity_start.xml
+++ b/res/layout/activity_start.xml
@@ -10,25 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp" >
-
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="30dp"
-            android:onClick="makePhotoClick"
-            android:text="@string/make_photo"
+            
+            <!--   android:text="@string/make_photo"
             android:textColor="@android:color/black"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold" /> -->
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="21dp"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/checkout"
             android:orientation="vertical" >
 
@@ -49,16 +41,28 @@
 
         <Button
             android:id="@+id/checkout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="26dp"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="14dp"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/button1"
             android:onClick="onCheckoutClicked"
-            android:text="Checkout"
+            android:background="@drawable/btn_checkout" />
+            <!--  android:text="Checkout"
             android:textColor="@android:color/black"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold" /> -->
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="100dp"
+            android:layout_height="27dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/btn_addtocart"
+            android:onClick="makePhotoClick" />
+
     </RelativeLayout>
 
     <TextView
