--- a/res/layout/activity_start.xml
+++ b/res/layout/activity_start.xml
@@ -77,4 +77,13 @@
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent" 
 		android:layout_weight="1"/>
+
+    <Button
+        android:id="@+id/btnClearList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Clear list"
+        android:onClick="onClearListClicked" />
+
 </LinearLayout>
