--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -2,14 +2,7 @@
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
-  android:layout_height="fill_parent">
-    <ImageView 
-    	android:src="@drawable/splash" 
-    	android:id="@+id/splashView" 
-    	android:layout_width="fill_parent" 
-    	android:layout_height="fill_parent">
-    	</ImageView>
-  
- 
+  android:layout_height="fill_parent"
+  android:background="@drawable/splash">
  
 </LinearLayout>
