--- a/res/drawable/btn_checkout.xml
+++ b/res/drawable/btn_checkout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/checkout_down"
+    <item android:drawable="@drawable/checkout_pressed"
           android:state_pressed="true" />
-    <item android:drawable="@drawable/checkout_up"
+    <item android:drawable="@drawable/checkout_normal"
           android:state_focused="true" />
-    <item android:drawable="@drawable/checkout_up" />
+    <item android:drawable="@drawable/checkout_normal" />
 </selector>
