--- a/res/layout/item.xml
+++ b/res/layout/item.xml
@@ -11,22 +11,26 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical">    
-  <TextView
+    <TextView
 	  	  android:id="@+id/text"
 	  	  android:layout_width="fill_parent"
 		  android:layout_height="wrap_content"
 		  android:layout_weight="1" 
 		  android:layout_gravity="left|center_vertical" 
-		  android:textSize="20dip" 
+		  android:textSize="24dip"
+		  android:text="Lipton Icetea" 
 		  android:layout_marginLeft="10dip"/>
 	
-	  <TextView
+	<TextView
 	  	  android:id="@+id/price"
 	  	  android:layout_width="fill_parent"
 		  android:layout_height="wrap_content"
+		  android:layout_marginTop="4dp"
 		  android:layout_weight="1"
 		  android:layout_gravity="left|center_vertical" 
-		  android:textSize="14dip" 
+		  android:textSize="18dip" 
+		  android:text="5.00 PLN"
+		  android:textColor="#00688B"
 		  android:layout_marginLeft="10dip"/>
   </LinearLayout>
 </LinearLayout>
