hide balls on fire

--- a/res/layout/activity_start.xml
+++ b/res/layout/activity_start.xml
@@ -70,13 +70,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:visibility="gone"
         android:text="@string/hello_world" />
     
     <ListView
 		android:id="@+id/productList"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent" 
-		android:layout_weight="1"/>
+		android:layout_weight="1"
+		android:background="@android:color/transparent"/>
 
     <Button
         android:id="@+id/btnClearList"
