--- a/res/layout/item.xml
+++ b/res/layout/item.xml
@@ -10,6 +10,7 @@
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginTop="10dp"
       android:orientation="vertical">    
     <TextView
 	  	  android:id="@+id/text"
@@ -18,7 +19,7 @@
 		  android:layout_weight="1" 
 		  android:layout_gravity="left|center_vertical" 
 		  android:textSize="24dip"
-		  android:text="Lipton Icetea" 
+		  android:text="Lipton" 
 		  android:layout_marginLeft="10dip"/>
 	
 	<TextView
@@ -33,4 +34,23 @@
 		  android:textColor="#00688B"
 		  android:layout_marginLeft="10dip"/>
   </LinearLayout>
+
+  <TextView
+      android:id="@+id/tvNoItems"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center"
+      android:layout_marginLeft="20dp"
+      android:text="1"
+      android:textSize="18dip" />
+  
+  <TextView
+      android:id="@+id/tvProductValue"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center"
+      android:layout_marginLeft="25dp"
+      android:text="10.00 PLN"
+      android:textSize="18dip" />
+  
 </LinearLayout>
