--- a/res/layout/number_dialog.xml
+++ b/res/layout/number_dialog.xml
@@ -1,7 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@android:color/black">
 
     <Button
         android:id="@+id/btnUp"
@@ -19,6 +20,7 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
         android:textSize="30sp"
+        android:textColor="@android:color/white"
         android:text="1" />
 
     <Button
