--- a/res/layout/number_dialog.xml
+++ b/res/layout/number_dialog.xml
@@ -10,18 +10,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_plus"
+            android:layout_gravity="center_horizontal|center_vertical"
         />
 
     <TextView
         android:id="@+id/tvNumberOfItems"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
         android:textSize="30sp"
         android:textColor="@android:color/white"
+        android:layout_gravity="center_horizontal|center_vertical"
         android:text="1" />
 
     <Button
@@ -29,6 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_minus"
+            android:layout_gravity="center_horizontal|center_vertical"
         />
 
 </LinearLayout>
